--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,17 @@
 <resources>
     <string name="app_name">GetAlong</string>
-    <string name="edit_profile">Edit Profile</string>
-    <string name="sign_out">Sign Out</string>
+
+    <!-- fragments -->
+    <string name="edit_profile_fragment">Edit Profile</string>
+    <string name="sign_out_fragment">Sign Out</string>
+
+    <!-- -firebase messages -->
+    <string name="auth_failed">Failed to Authenticate</string>
+    <string name="auth_success">Authentication Success !!</string>
+
+
+    <!-- firebase database fields -->
+    <string name="dbname_users">users</string>
+    <string name="dbname_user_account_settings">user_account_settings</string>
+
 </resources>
