--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <!-- fragments -->
     <string name="edit_profile_fragment">Edit Profile</string>
     <string name="sign_out_fragment">Sign Out</string>
+    <string name="profile_fragment">Profile</string>
+
+
+    <!-- dialog name -->
+    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
 
     <!-- -firebase messages -->
     <string name="auth_failed">Failed to Authenticate</string>
@@ -13,5 +18,15 @@
     <!-- firebase database fields -->
     <string name="dbname_users">users</string>
     <string name="dbname_user_account_settings">user_account_settings</string>
+    <string name="field_username">username</string>
+
+    <!-- intent firebase -->
+    <string name="calling_activity">calling_activity</string>
+
+    <!--activity name -->
+    <string name="profile_activity">Profile Activity</string>
+
+
+
 
 </resources>
